--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,11 +10,17 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+
+        // Enabling multidex support.
+        multiDexEnabled true
     }
     sourceSets {
         main {
             jniLibs.srcDirs = ['libs']
         }
+    }
+    dexOptions {
+        javaMaxHeapSize "4g"
     }
     buildTypes {
         release {
@@ -25,6 +31,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.0.1'
+    compile project(':classes')
+    compile 'com.android.support:multidex:1.0.0'
 }
